# tubesubs

./: .darglint  .gitignore  .pre-commit-config.yaml  .safety-policy.yml  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  start.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml  build_and_publish.yml
app/: __init__.py  __main__.py  paths.py
app/api/: deps.py
app/api/v1/: api.py
app/core/: app.py  cli.py  debug_helpers.py  notify.py  proxy.py  security.py  server.py
app/crud/: __init__.py  base.py  channel.py  criteria.py  filter.py  filter_group.py  playlist.py  playlist_item.py  subscription.py  tag.py  user.py  video.py
app/data/: .env.example
app/db/: init_db.py  session.py
app/handlers/: __init__.py  base.py  exceptions.py  rumble.py  youtube.py  youtube_recommended.py  youtube_subscription.py
app/models/: __init__.py  alerts.py  channel.py  channel_tag_link.py  criteria.py  fetch.py  filter.py  filter_filter_group_link.py  filter_group.py  filtered_videos.py  playlist.py  playlist_item.py  settings.py  subscription.py  subscription_filter_link.py  subscription_video_link.py  tag.py  user.py  video.py
app/services/: channel.py  color_hex.py  feed.py  fetch.py  filter_videos.py  subscription.py  videos.py  ytdlp.py
app/views/: __init__.py  deps.py  router.py
app/views/pages/: account.py  channels.py  criteria.py  filter_groups.py  filters.py  login.py  playlist.py  playlist_item.py  root.py  subscriptions.py  tag.py  user.py  videos.py
app/views/static/: style.css
app/views/templates/: __init__.py  filters.py
migrations/: env.py
migrations/versions/: 11e142e18c14_add_tag_color.py  1373ab845ff3_init.py  2475b17c93ad_add_channels_is_hidden.py  34edd7b98a76_add_subscription_max_videos_per_fetch.py  5c4809fec0fc_init.py  8218d280afd3_add_channel_is_subscribed.py  86b20b1aeb38_add_filter_group.py  a2b7596775de_init.py  c2b00a0ce177_add_tag_model.py  ce8642782d79_added_video_is_read.py  cfce02eb9b5a_add_playlist_item_duration.py  d306d0ab74fd_add_video_view_count.py  d6d0658d2a12_added_filter_reverse_order.py  f66306890361_added_thumbnail_to_playlist_item.py  f979187c6b80_added_playlist_playlist_item.py
python_fastapi_stack/: __init__.py  __main__.py  paths.py
python_fastapi_stack/api/: deps.py
python_fastapi_stack/api/v1/: api.py
python_fastapi_stack/core/: app.py  cli.py  debug_helpers.py  logger.py  notify.py  proxy.py  security.py  server.py
python_fastapi_stack/crud/: __init__.py  base.py  item.py  user.py  video.py
python_fastapi_stack/data/: .env.example
python_fastapi_stack/db/: init_db.py  session.py
python_fastapi_stack/models/: __init__.py  alerts.py  common.py  item.py  settings.py  tokens.py  user.py  video.py
python_fastapi_stack/views/: __init__.py  deps.py  router.py
python_fastapi_stack/views/endpoints/: account.py  item.py  items.py  login.py  root.py  user.py  videos.py
python_fastapi_stack/views/pages/: account.py  items.py  root.py  user.py  videos.py
python_fastapi_stack/views/static/: style.css
python_fastapi_stack/views/templates/: base.html  view_items.html  view_videos.html
tests/: conftest.py  mock_objects.py  test_main.py
tests/core/: test_auth_handler.py.old  test_cli.py  test_database.py  test_debug_helper.py  test_notify.py  test_proxy.py  test_server.py
tests/crud/: test_item_crud.py  test_user_crud.py  test_video_crud.py
tests/endpoints/: test_auth_endpoint.py.old
tests/views/: test_alerts.py  test_deps.py  test_templates.py
tests/views/endpoints/: test_item_endponts.py  test_items_endponts.py  test_login_endponts.py  test_video_endponts.py
tests/views/pages/: test_account_pages.py  test_items_pages.py  test_login_pages.py  test_root_pages.py  test_user_pages.py  test_video_pages.py
thunder-tests/: thunderCollection.json  thunderEnvironment.json.example  thunderclient.json
typings/emails/: __init__.pyi  exc.pyi  message.pyi  signers.pyi  transformer.pyi  utils.pyi
typings/emails/backend/: __init__.pyi  factory.pyi  response.pyi
typings/emails/compat/: __init__.pyi  ordereddict.pyi  orderedset.pyi
typings/emails/loader/: helpers.pyi  local_store.pyi
typings/emails/store/: __init__.pyi  file.pyi  store.pyi
typings/emails/template/: __init__.pyi  base.pyi  jinja_template.pyi  mako_template.pyi
typings/feedgen/: __init__.pyi  entry.pyi  feed.pyi  util.pyi
typings/yt_dlp/: YoutubeDL.pyi  __init__.pyi  aes.pyi  cache.pyi  cookies.pyi  jsinterp.pyi  minicurses.pyi  options.pyi  plugins.pyi  socks.pyi  update.pyi  utils.pyi  version.pyi  webvtt.pyi
typings/yt_dlp/__pyinstaller/: __init__.pyi
typings/yt_dlp/compat/: __init__.pyi  compat_utils.pyi  functools.pyi  imghdr.pyi  shutil.pyi
typings/yt_dlp/dependencies/: Cryptodome.pyi  __init__.pyi
typings/yt_dlp/downloader/: common.pyi  dash.pyi  external.pyi  f4m.pyi  fc2.pyi  fragment.pyi  hls.pyi  http.pyi  ism.pyi  mhtml.pyi  niconico.pyi  rtmp.pyi  rtsp.pyi  websocket.pyi  youtube_live_chat.pyi
typings/yt_dlp/extractor/: __init__.pyi  abc.pyi  abcnews.pyi  abcotvs.pyi  abematv.pyi  academicearth.pyi  acast.pyi  acfun.pyi  adn.pyi  adobeconnect.pyi  adobepass.pyi  adobetv.pyi  adultswim.pyi  aenetworks.pyi  aeonco.pyi  afreecatv.pyi  agora.pyi  airmozilla.pyi  airtv.pyi  aitube.pyi  aliexpress.pyi  aljazeera.pyi  allocine.pyi  alphaporno.pyi  alsace20tv.pyi  alura.pyi  amara.pyi  amazon.pyi  amazonminitv.pyi  amcnetworks.pyi  americastestkitchen.pyi  amp.pyi  anchorfm.pyi  angel.pyi  ant1newsgr.pyi  anvato.pyi  aol.pyi  apa.pyi  aparat.pyi  appleconnect.pyi  (+994 more)
typings/yt_dlp/postprocessor/: __init__.pyi  common.pyi  embedthumbnail.pyi  exec.pyi  ffmpeg.pyi  metadataparser.pyi  (+5 more)
(+60 files in other folders)
