# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tubesubs"
version = "0.0.2"
description = "A python project."
readme = "README.md"
authors = ["martokk <25113632+martokk@users.noreply.github.com>"]
license = "MIT"
repository = "https://github.com/martokk/tubesubs"
homepage = "https://github.com/martokk/tubesubs"

# Keywords description https://python-poetry.org/docs/pyproject/#keywords
keywords = ["fastapi", "poetry", "python", "sqlmodel", "alembic", "loguru", "crud"]

# Pypi classifiers: https://pypi.org/classifiers/
classifiers = []

[tool.poetry.scripts]
# Entry points for the package https://python-poetry.org/docs/pyproject/#scripts
"tubesubs" = "app.__main__:app"

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.6.0"
pyyaml = "^6.0"
python-dotenv = "^1.0.0"
shortuuid = "^1.0.11"
httpx = "^0.23.3"
wheel = "^0.38.1"
python-telegram-bot = "^20.0"
typer = {extras = ["all"], version = "^0.6.1"}
rich = "^12.6.0"
colorama = "^0.4.5"
fastapi = "^0.100.0"
uvicorn = "^0.21.0"
fastapi-utils = "^0.2.1"
jinja2 = "^3.1.2"
pyjwt = "^2.6.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
alembic = "^1.9.2"
asyncpg = "^0.27.0"
emails = "^0.6"
python-multipart = "^0.0.6"
email-validator = "^1.3.0"
pydantic = "^1.10.4"
sqlmodel = "^0.0.8"
feedgen = "^0.9.0"
yt-dlp = "2023.3.4" # update to "^2023.7.6" anytime after 7/6 when the "_allowed_colors" bug is fixed.
types-pyyaml = "^6.0.12.8"
types-requests = "^2.31.0.1"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.1"
black = {version = "^23.1.0", allow-prereleases = true}
darglint = "^1.8.1"
flake8 = "^6.0.0"
isort = {extras = ["colors"], version = "^5.10.1"}
mypy = "^1.0.1"
mypy-extensions = "^1.0.0"
pre-commit = "^3.1.1"
pydocstyle = "^6.1.1"
pylint = "^2.11.1"
pytest = "^7.1.3"
pytest-mock = "^3.10.0"
pyupgrade = "^3.1.0"
safety = "^2.3.1"
coverage = "^7.2.1"
coverage-badge = "^1.1.0"
pytest-html = "^3.1.1"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.20.3"

[tool.black]
# https://github.com/psf/black
target-version = ["py310"]
line-length = 100
color = true

exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | env
    | migrations
    | venv
    | typings
)/
'''

[tool.flake8]
profile = 'black'


[tool.darglint]
# https://github.com/terrencepreilly/darglint
strictness = "full"
docstring_style = "google"
message_template="{path}  :  {line} -  {msg_id} -{msg}"


[tool.isort]
# https://github.com/timothycrosley/isort/
profile = "black"
py_version = 310
line_length = 100

known_typing = ["typing", "typings", "types", "typing_extensions", "mypy", "mypy_extensions"]
sections = ["FUTURE", "TYPING", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
include_trailing_comma = true
multi_line_output = 3
indent = 4
color_output = true
skip = ["pyqt5_ui.py", "resources_rc.py"]
skip_glob = [".venv/*", "typings/*", "migrations/*"]

[tool.mypy]
# https://mypy.readthedocs.io/en/latest/config_file.html#using-a-pyproject-toml-file
python_version = "3.10"
pretty = true
show_traceback = true
color_output = true
allow_redefinition = false
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = false
exclude = ["typings", "migrations", "venv", "build", "dist", "docs", ".tox", ".git", "__pycache__"]

[[tool.mypy.overrides]]
module = "*.pyqt5_ui"
ignore_errors = true

[tool.pytest.ini_options]
# https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
# Directories that are not visited by pytest collector:
norecursedirs =["hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__"]
doctest_optionflags = ["NUMBER", "NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]
python_files = ["tests.py", "test_*.py", "*_tests.py"]
asyncio_mode="auto"


# Extra options:
addopts = [
  "--strict-markers",
  "--tb=short",
  "--doctest-modules",
  "--doctest-continue-on-failure",
]

[tool.coverage.run]
source = ["tests"]

[coverage.paths]
source = "app"

[coverage.run]
branch = true

[coverage.report]
fail_under = 50
show_missing = true

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"

[tool.pylint]
# https://pylint.pycqa.org/en/latest/user_guide/run.html
extension-pkg-whitelist = ['pydantic']
ignore = ["typings", "migrations", "venv", "build", "dist", "docs", ".tox", ".git", "__pycache__"]
max-line-length = 100
exclude = ["typings", "migrations", "venv", "build", "dist", "docs", ".tox", ".git", "__pycache__"]
ignore_missing_imports = true
show_column_numbers = true
no_pretty = true
follow_imports = "silent"

[tool.pyright]
include = ["app", "tests"]
ignore = ["typings", "migrations", "venv", "build", "dist", "docs", ".tox", ".git", "__pycache__"]
# useLibraryCodeForTypes = true
# typeCheckingMode = "strict"
# reportMissingImports = "information"
# reportMissingTypeStubs = "information"
# reportUnknownMemberType = "information"
# reportGeneralTypeIssues = "information"
extraPaths = ["app"]

[tool.pyupgrade]
py310-plus = true
skip = ["typings", "migrations", "venv", "build", "dist", "docs", ".tox", ".git", "__pycache__"]
exclude = [".venv/*", "typings/*", "migrations/*"]

[tool.bandit]
skips = ["B104"]
